# Personal-AI-Newsletter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  main.py  setup.py
src/agents/: __init__.py  analytics.py  collector.py  curator.py  error_handlers.py  generator.py  sender.py  validator.py
src/infrastructure/: __init__.py  config.py  database.py  error_handling.py  logging.py
src/infrastructure/api_clients/: __init__.py  firecrawl_api.py  rate_limiter.py
src/infrastructure/mcp_clients/: __init__.py  base.py  github_client.py  resend_client.py
src/models/: __init__.py  content.py  email.py  state.py  user.py
src/services/: __init__.py  content_collection.py  curation.py  email_generation.py  notification.py  openai_service.py  user_profile.py
src/workflows/: __init__.py  newsletter.py
templates/email/: newsletter.html
